src/ui/snapshots/devsweep__ui__review__tests__snapshot_done_offering_leftover_branches.snap
---
source: src/ui/review.rs
assertion_line: 527
expression: render(&done_with_leftovers()).backend()
---
"┌ devsweep ─ /Users/u/Workspace ───────────────────────────────────────────────────────────────────┐"
"│ ✓ Freed 2.1 GB                                                       disk free 41.0 GB → 43.1 GB │"
"│                                                                                                  │"
"│   Worktrees     507 MB   2 items                                                                 │"
"│   Docker        1.6 GB   1 item                                                                  │"
"│                                                                                                  │"
"│ Everything selected was removed.                                                                 │"
"│                                                                                                  │"
"│ 2 merged branches were left behind by the removed worktrees.                                     │"
"│   Press b to review and delete them.                                                             │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│──────────────────────────────────────────────────────────────────────────────────────────────────│"
"│ b branches · r rescan · q quit                                                                   │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
