src/ui/snapshots/devsweep__ui__review__tests__snapshot_done_with_an_error_longer_than_the_line.snap
---
source: src/ui/review.rs
assertion_line: 632
expression: t.backend()
---
"┌ devsweep ─ /Users/u/Workspace ───────────────────────────────────────────────────────────────────┐"
"│ ✓ Freed 2.0 GB                                                                                   │"
"│                                                                                                  │"
"│   Worktrees     412 MB   1 item                                                                  │"
"│   Docker        1.6 GB   1 item                                                                  │"
"│                                                                                                  │"
"│ ✗ 1 not removed                                                                                  │"
"│   ✗ codex/old app                                                                                │"
"│     git failed: error: failed to delete 'C:/Users/u/Documents/work/acme/app/.claude/worktrees/de │"
"│     v-2287-feature-45d8b2': Permission denied                                                    │"
"│   Press r to scan again.                                                                         │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│──────────────────────────────────────────────────────────────────────────────────────────────────│"
"│ r rescan · q quit                                                                                │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
