src/ui/snapshots/devsweep__ui__review__tests__snapshot_done_with_failures.snap
---
source: src/ui/review.rs
assertion_line: 426
expression: render(&done(true)).backend()
---
"┌ devsweep ─ /Users/u/Workspace ───────────────────────────────────────────────────────────────────┐"
"│ ✓ Freed 1.7 GB                                                       disk free 41.0 GB → 43.1 GB │"
"│                                                                                                  │"
"│   Worktrees      95 MB   1 item                                                                  │"
"│   Docker        1.6 GB   1 item                                                                  │"
"│                                                                                                  │"
"│ ✗ 1 not removed                                                                                  │"
"│   ✗ codex/glowz-robots                                                        changed since scan │"
"│   Left alone on purpose: they changed after the scan.                                            │"
"│   Press r to scan again and review them.                                                         │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│──────────────────────────────────────────────────────────────────────────────────────────────────│"
"│ r rescan · q quit                                                                                │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
