src/ui/snapshots/devsweep__ui__review__tests__snapshot_done_without_failures.snap
---
source: src/ui/review.rs
expression: render(&done(false)).backend()
---
"┌ devsweep ─ /Users/u/Workspace ───────────────────────────────────────────────────────────────────┐"
"│ ✓ Freed 2.1 GB                                                       disk free 41.0 GB → 43.1 GB │"
"│                                                                                                  │"
"│   Worktrees  ███████▍                   507 MB   2 items                                         │"
"│   Docker     ████████████████████████   1.6 GB   1 item                                          │"
"│                                                                                                  │"
"│ Everything selected was removed.                                                                 │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│──────────────────────────────────────────────────────────────────────────────────────────────────│"
"│ r rescan · q quit                                                                                │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
