src/ui/snapshots/devsweep__ui__review__tests__snapshot_removing_mixed_progress.snap
---
source: src/ui/review.rs
assertion_line: 208
expression: render(&a).backend()
---
"┌ devsweep ─ /Users/u/Workspace ───────────────────────────────────────────────────────────────────┐"
"│ ⠋ Removing · 1.6 GB freed so far                                                                 │"
"│                                                                                                  │"
"│ Worktrees                                                                                        │"
"│   ✗ codex/glowz-robots                                                        changed since scan │"
"│   ⠋ codex/old app                                                                       removing │"
"│ Docker                                                                                           │"
"│   ✓ Dangling images                                                                         1.6G │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│──────────────────────────────────────────────────────────────────────────────────────────────────│"
"│ q quit when finished                                                                             │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
