src/ui/snapshots/devsweep__ui__review__tests__snapshot_removing_while_stopping.snap
---
source: src/ui/review.rs
assertion_line: 330
expression: render(&a).backend()
---
"┌ devsweep ─ /Users/u/Workspace ───────────────────────────────────────────────────────────────────┐"
"│ ⠋ Removing · 0 B freed so far                                                                    │"
"│                                                                                                  │"
"│ Worktrees                                                                                        │"
"│   · codex/glowz-robots                                                                   waiting │"
"│   · codex/old app                                                                        waiting │"
"│ Docker                                                                                           │"
"│   ⠋ Dangling images                                                                     removing │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│──────────────────────────────────────────────────────────────────────────────────────────────────│"
"│ stopping after the current item · ctrl-c again to quit now                                       │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
