src/ui/snapshots/devsweep__ui__review__tests__snapshot_review_grouped_with_commands.snap
---
source: src/ui/review.rs
expression: render(&reviewing()).backend()
---
"┌ devsweep ─ /Users/u/Workspace ───────────────────────────────────────────────────────────────────┐"
"│ Review · 3 items · 2.1 GB                                                                        │"
"│                                                                                                  │"
"│ Worktrees                                                                                        │"
"│   codex/glowz-robots                                                                      412 MB │"
"│     (cd /Users/u/Workspace/glowz) git worktree remove /Users/u/.codex/worktrees/glowz-robots     │"
"│   codex/old app                                                                            95 MB │"
"│     rm -rf '/Users/u/.codex/worktrees/old app'                                                   │"
"│                                                                                                  │"
"│ Docker                                                                                           │"
"│   Dangling images                                                                         1.6 GB │"
"│     docker image prune -f                                                                        │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│──────────────────────────────────────────────────────────────────────────────────────────────────│"
"│ y confirm · ↑↓ scroll · any other key back                                                       │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
