src/ui/snapshots/devsweep__ui__review__tests__snapshot_review_of_leftover_branches.snap
---
source: src/ui/review.rs
assertion_line: 534
expression: render(&a).backend()
---
"┌ devsweep ─ /Users/u/Workspace ───────────────────────────────────────────────────────────────────┐"
"│ Review · 2 branches                                                                              │"
"│                                                                                                  │"
"│ Branches                                                                                         │"
"│   glowz · feat/robots-txt                                                                 merged │"
"│     (cd /Users/u/Workspace/glowz) git branch -D feat/robots-txt                                  │"
"│   glowz · worktree-validated-tinkering-marble                                             merged │"
"│     (cd /Users/u/Workspace/glowz) git branch -D worktree-validated-tinkering-marble              │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│──────────────────────────────────────────────────────────────────────────────────────────────────│"
"│ y confirm · ↑↓ scroll · any other key back                                                       │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
